  12 May 2019;  <chymera@gentoo.org> +metadata.xml, repositorg-9999.ebuild:
  app-misc/repositorg: Updated metadata and systemd   USE functionality